--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
   },
   "dependencies": {
     "express": "~4.9.0",
+    "express-session": "~1.9.3",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "jade": "~1.6.0"
+    "jade": "~1.6.0",
+    "ejs": "~1.0.0",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
+    "html": "~0.0.7",
+    "serialport": "~1.4.9",
+    "sqlite3": "~3.0.4",
+    "diskspace": "~0.1.7",
+    "crypto": "~0.0.3",
+    "connect-flash": "0.1.1"
   }
 }
